Add assets and fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Recipe Page</title>
 </head>
 <body>
-    
+    <div>
+        <img src="/assets/images/image-omelette.jpeg" alt="simple omelette">
+    </div>
+    <div>
+        <h1>Simple Omelette Recipe</h1>
+        <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionaly filled with your choice of cheese, vegetables, or meats.</p>
+    </div>
+    <div>
+        <h2>Preparations time</h2>
+        <p>Total: Approximately 10 minutes</p>
+        <p>Preparation: 5 minutes</p>
+        <p>Cooking: 5 minutes</p>
+    </div>
 </body>
 </html>
