--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
         <p>Preparation: 5 minutes</p>
         <p>Cooking: 5 minutes</p>
     </div>
+    <div>
+        <h2>Ingredients</h2>
+    </div>
+    <div>
+        <h2>Instructions</h2>
+    </div>
+    <div>
+        <h2>Nutrition</h2>
+    </div>
 </body>
 </html>
