--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     </div>
     <div>
         <h2>Ingredients</h2>
+        <ul>
+            <li>2-3 Large eggs</li>
+            <li>Salt, to taste</li>
+            <li>Pepper, to taste</li>
+            <li>1 Tablespoon of butter or oil</li>
+            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
     </div>
     <div>
         <h2>Instructions</h2>
