--- a/index.html
+++ b/index.html
@@ -6,44 +6,53 @@
     <title>Recipe Page</title>
 </head>
 <body>
-    <div>
-        <img src="/assets/images/image-omelette.jpeg" alt="simple omelette">
-    </div>
-    <div>
-        <h1>Simple Omelette Recipe</h1>
-        <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionaly filled with your choice of cheese, vegetables, or meats.</p>
-    </div>
-    <div>
-        <h3>Preparations time</h3>
-        <ul>
-            <li><strong>Total:</strong> Approximately 10 minutes</li>
-            <li><strong>Preparation:</strong> 5 minutes</li>
-            <li><strong>Cooking:</strong> 5 minutes</li>
-        </ul>
-    </div>
-    <div>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2-3 Large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 Tablespoon of butter or oil</li>
-            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
-    </div>
-    <div>
-        <h2>Instructions</h2>
-        <ol>
-            <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffer texture.</li>
-            <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-            <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-            <li><strong>Add Fillings (optional):</strong> When the eggs being to seat at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-            <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-            <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
-        </ol>
-    </div>
-    <div>
-        <h2>Nutrition</h2>
+    <div id="recipe">
+        <div>
+            <img src="/assets/images/image-omelette.jpeg" alt="simple omelette">
+        </div>
+        <div>
+            <h1>Simple Omelette Recipe</h1>
+            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionaly filled with your choice of cheese, vegetables, or meats.</p>
+        </div>
+        <div>
+            <h3>Preparations time</h3>
+            <ul>
+                <li><strong>Total:</strong> Approximately 10 minutes</li>
+                <li><strong>Preparation:</strong> 5 minutes</li>
+                <li><strong>Cooking:</strong> 5 minutes</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2-3 Large eggs</li>
+                <li>Salt, to taste</li>
+                <li>Pepper, to taste</li>
+                <li>1 Tablespoon of butter or oil</li>
+                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Instructions</h2>
+            <ol>
+                <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffer texture.</li>
+                <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+                <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+                <li><strong>Add Fillings (optional):</strong> When the eggs being to seat at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+                <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+                <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+            </ol>
+        </div>
+        <div>
+            <h2>Nutrition</h2>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
+            <ul>
+                <li>Calories <strong>277kcal</strong></li>
+                <li>Carbs <strong>0g</strong></li>
+                <li>Protein <strong>20g</strong></li>
+                <li>Fat <strong>22g</strong></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
